--- a/cpp/test/CMakeLists.txt
+++ b/cpp/test/CMakeLists.txt
@@ -16,6 +16,7 @@
 
 # keep the files in alphabetical order!
 add_executable(test_rapids_triton
+    test/test.cpp
 )
 
 set_target_properties(test_rapids_triton
