--- a/cpp/test/CMakeLists.txt
+++ b/cpp/test/CMakeLists.txt
@@ -17,6 +17,7 @@
 # keep the files in alphabetical order!
 add_executable(test_rapids_triton
     test/build_control.cpp
+    test/exceptions.cpp
     test/test.cpp
 )
 
@@ -46,6 +47,8 @@ target_link_libraries(test_rapids_triton
 PRIVATE
   rmm::rmm
   raft::raft
+  triton-core-serverstub
+  triton-backend-utils
   GTest::gtest
   GTest::gtest_main
   $<TARGET_NAME_IF_EXISTS:conda_env>
