--- a/cpp/test/CMakeLists.txt
+++ b/cpp/test/CMakeLists.txt
@@ -22,8 +22,10 @@ add_executable(test_rapids_triton
     test/memory/detail/allocate.cpp
     test/memory/detail/copy.cpp
     test/memory/types.cpp
+    test/tensor/dtype.cpp
     test/triton/device.cpp
     test/test.cpp
+    test/utils/const_agnostic.cpp
     test/utils/narrow.cpp
 )
 
