Do not access moved-from object

--- a/cpp/src/CMakeLists.txt
+++ b/cpp/src/CMakeLists.txt
@@ -16,11 +16,11 @@
 
 # keep the files in alphabetical order!
 add_library(
-  rapids-identity SHARED
+  triton_rapids-identity SHARED
   src/api.cc
 )
 
-set_target_properties(rapids-identity
+set_target_properties(triton_rapids-identity
 PROPERTIES BUILD_RPATH                         "\$ORIGIN"
            # set target compile options
            CXX_STANDARD                        17
@@ -31,17 +31,17 @@ PROPERTIES BUILD_RPATH                         "\$ORIGIN"
            INTERFACE_POSITION_INDEPENDENT_CODE ON
 )
 
-target_compile_options(rapids-identity
+target_compile_options(triton_rapids-identity
         PRIVATE "$<$<COMPILE_LANGUAGE:CXX>:${RAPIDS_TRITON_CXX_FLAGS}>"
                 "$<$<COMPILE_LANGUAGE:CUDA>:${RAPIDS_TRITON_CUDA_FLAGS}>"
 )
 
-target_include_directories(rapids-identity
+target_include_directories(triton_rapids-identity
   PRIVATE  "$<BUILD_INTERFACE:${RAPIDS_TRITON_SOURCE_DIR}/include>"
             "${CMAKE_CURRENT_SOURCE_DIR}/src"
 )
 
-target_link_libraries(rapids-identity
+target_link_libraries(triton_rapids-identity
 PRIVATE
   rmm::rmm
   raft::raft
@@ -49,4 +49,9 @@ PRIVATE
   triton-backend-utils
   "${TRITONSERVER_LIB}"
   $<TARGET_NAME_IF_EXISTS:conda_env>
+)
+
+install(
+  TARGETS triton_rapids-identity
+  LIBRARY DESTINATION /opt/tritonserver/backends/rapids-identity
 )
