--- a/conda/environments/rapids_triton_test.yml
+++ b/conda/environments/rapids_triton_test.yml
@@ -1,8 +1,9 @@
 ---
-name: rapids_triton_dev
+name: rapids_triton_test
 channels:
   - conda-forge
 dependencies:
+  - clang-tools=11.0.0
   - flake8
   - pip
   - python
